Compiler exports